<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>be.gestatech</groupId>
    <artifactId>cargo-tracker</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>cargo-tracker-master</name>

    <url>http://www.gestatech.be</url>

    <inceptionYear>2017</inceptionYear>

    <licenses>
        <license>
            <name>Apache License, Version 2.0</name>
            <distribution>repo</distribution>
            <url>http://www.apache.org/licenses/LICENSE-2.0.html</url>
        </license>
    </licenses>

    <prerequisites>
        <maven>${version.maven}</maven>
    </prerequisites>

    <developers>
        <developer>
            <id>gestatech</id>
            <name>Fariala Amuri</name>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <properties>
        <!-- Java SE/EE -->
        <java.version>1.8</java.version>
        <version.java.ee.api>7.0</version.java.ee.api>
        <version.eclipselink>2.6.1</version.eclipselink>
        <version.javax.persistence>2.2.0</version.javax.persistence>
        <version.java.ejb>3.2</version.java.ejb>
        <failOnMissingWebXml>false</failOnMissingWebXml>
        <project.encoding>UTF-8</project.encoding>
        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
        <maven.build.timestamp.format>yyyyMMdd</maven.build.timestamp.format>
        <currentYearDynamic>${maven.build.timestamp}</currentYearDynamic>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.artifact.artifactHandler.extension>ear</project.artifact.artifactHandler.extension>
        <!-- Plugins -->
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <version.maven>3.3.9</version.maven>
        <version.compiler.plugin>3.6.2</version.compiler.plugin>
        <version.ear.plugin>2.10.1</version.ear.plugin>
        <version.ejb.plugin>3.0.0</version.ejb.plugin>
        <version.war.plugin>3.1.0</version.war.plugin>
        <version.jar.plugin>3.0.2</version.jar.plugin>
        <version.dependency.plugin>2.8</version.dependency.plugin>
        <version.surefire.plugin>2.20</version.surefire.plugin>
        <version.source.plugin>3.0.1</version.source.plugin>
        <version.javadoc.plugin>2.10.4</version.javadoc.plugin>
        <version.resources.plugin>3.0.2</version.resources.plugin>
        <version.asadmin.maven.plugin>0.12</version.asadmin.maven.plugin>
        <version.docker.maven.plugin>0.22.1</version.docker.maven.plugin>
        <!-- Glassfish settings -->
        <glassfish.password.file>config/asadmin-truststore.txt</glassfish.password.file>
        <!-- Other dependencies -->
        <version.junit>4.12</version.junit>
        <version.mockito.all>1.9.5</version.mockito.all>
    </properties>

    <build>
        <finalName>${project.artifactId}</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${version.compiler.plugin}</version>
                    <inherited>true</inherited>
                    <configuration>
                        <verbose>true</verbose>
                        <fork>true</fork>
                        <optimize>true</optimize>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <maxmem>512m</maxmem>
                        <meminitial>128m</meminitial>
                        <showWarnings>true</showWarnings>
                        <showDeprecation>true</showDeprecation>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <compilerVersion>${maven.compiler.source}</compilerVersion>
                        <compilerArgument>-Xlint:all,-options,-path</compilerArgument>
                        <compilerArguments>
                            <endorseddirs>${endorsed.dir}</endorseddirs>
                        </compilerArguments>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-ear-plugin</artifactId>
                    <version>${version.ear.plugin}</version>
                    <configuration>
                        <version>7</version>
                        <defaultLibBundleDir>lib</defaultLibBundleDir>
                        <fileNameMapping>no-version</fileNameMapping>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-ejb-plugin</artifactId>
                    <version>${version.ejb.plugin}</version>
                    <configuration>
                        <ejbVersion>${version.java.ejb}</ejbVersion>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>${version.war.plugin}</version>
                    <configuration>
                        <failOnMissingWebXml>${failOnMissingWebXml}</failOnMissingWebXml>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>${version.jar.plugin}</version>
                    <configuration>
                        <archive>
                            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                        </archive>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>test-jar</goal>
                            </goals>
                            <configuration>
                                <forceCreation>true</forceCreation>
                                <skip>false</skip>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${version.dependency.plugin}</version>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <goals>
                                <goal>copy</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>${endorsed.dir}</outputDirectory>
                                <silent>true</silent>
                                <artifactItems>
                                    <artifactItem>
                                        <groupId>javax</groupId>
                                        <artifactId>javaee-endorsed-api</artifactId>
                                        <version>${version.java.ee.api}</version>
                                        <type>jar</type>
                                    </artifactItem>
                                </artifactItems>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${version.surefire.plugin}</version>
                    <configuration>
                        <argLine>-Djava.endorsed.dirs=${endorsed.dir}</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${version.source.plugin}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${version.resources.plugin}</version>
                    <configuration>
                        <encoding>${project.build.sourceEncoding}</encoding>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${version.javadoc.plugin}</version>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.codeartisans.asadmin</groupId>
                    <artifactId>asadmin-maven-plugin</artifactId>
                    <version>${version.asadmin.maven.plugin}</version>
                    <configuration>
                        <glassfishHome>C:/Pgm/Oracle/glassfish-4.1.2</glassfishHome>
                        <domain>domain1</domain>
                        <host>localhost</host>
                        <port>4848</port>
                        <user>admin</user>
                        <passwordfile>../${glassfish.password.file}</passwordfile>
                        <appArchive>
                            ${project.build.directory}/${project.build.finalName}.${project.artifact.artifactHandler.extension}
                        </appArchive>
                        <contextRoot>${project.artifactId}</contextRoot>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>frontend</module>
        <module>backend</module>
        <module>ear</module>
    </modules>

</project>
